[gd_scene load_steps=4 format=3 uid="uid://dnm3ck3rojtcv"]

[ext_resource type="Script" path="res://Scripts/WoodButton.gd" id="1_ijofi"]
[ext_resource type="Resource" uid="uid://dh0g70vbch5gk" path="res://Resources/Materials/Wood.tres" id="2_k02ur"]
[ext_resource type="Resource" uid="uid://t5xfnparaeqg" path="res://Resources/Materials/Water.tres" id="3_562cg"]

[node name="WoodButton" type="Button" node_paths=PackedStringArray("upgrade_cost_display")]
offset_left = 220.0
offset_top = 106.0
offset_right = 374.0
offset_bottom = 137.0
text = "Buy Wood Building"
script = ExtResource("1_ijofi")
BuildingResource = ExtResource("2_k02ur")
buildingCost = {
ExtResource("3_562cg"): 5
}
upgrade_cost_display = NodePath("")

[node name="BuildingLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 75.0
offset_right = 90.0
offset_bottom = 98.0
text = "Test"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
